@@ -15,17 +15,25 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.5.7.RELEASE</version>
+        <version>2.0.0.M7</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>1.8</java.version>
+        <java.version>1.9</java.version>
 
         <start-class>com.redparty.partyplanner.PartyPlannerApp</start-class>
-        <lombok.version>1.16.18</lombok.version>
-        <quartz.version>2.3.0</quartz.version>
+        <lombok.version>1.16.20</lombok.version>
+
+        <junit.version>4.12</junit.version>
+        <!--<junit.jupiter.version>5.0.3</junit.jupiter.version>-->
+        <junit.vintage.version>${junit.version}.3</junit.vintage.version>
+        <junit.platform.version>1.0.2</junit.platform.version>
+
+        <!-- TODO remove once a newer version of surefire (2.21.1+) is compatible with JUnit 5 and used by Spring Boot -->
+        <!-- Reference: https://github.com/junit-team/junit5/issues/809 -->
+        <maven-surefire-plugin.version>2.19.1</maven-surefire-plugin.version>
     </properties>
 
     <dependencies>
@@ -34,12 +42,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-tomcat</artifactId>
-            <!--for idea only need to be commented-->
-            <!--<scope>provided</scope>-->
         </dependency>
 
         <!-- DB -->
@@ -51,10 +53,6 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <scope>runtime</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.datatype</groupId>
-            <artifactId>jackson-datatype-jsr310</artifactId>
         </dependency>
 
         <!-- Spring security -->
@@ -77,6 +75,7 @@
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-test</artifactId>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
@@ -87,6 +86,20 @@
         <dependency>
             <groupId>com.jayway.jsonpath</groupId>
             <artifactId>json-path-assert</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- To avoid compiler warnings about @API annotations in JUnit code -->
+        <dependency>
+            <groupId>org.apiguardian</groupId>
+            <artifactId>apiguardian-api</artifactId>
+            <version>1.0.0</version>
             <scope>test</scope>
         </dependency>
 
@@ -118,9 +131,8 @@
         </dependency>
 
         <dependency>
-            <groupId>org.quartz-scheduler</groupId>
-            <artifactId>quartz</artifactId>
-            <version>${quartz.version}</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-quartz</artifactId>
         </dependency>
 
         <!-- Caching (for autoconfig in Boot >= 1.3 ) -->
@@ -128,6 +140,14 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-cache</artifactId>
         </dependency>
+
+        <!-- todo review Java 9 issue https://github.com/spring-projects/spring-boot/wiki/Spring-Boot-with-Java-9  -->
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.0</version>
+        </dependency>
+        <!---->
 
     </dependencies>
 
@@ -161,42 +181,66 @@
                     </execution>
                 </executions>
             </plugin>
+
+            <!-- todo delete Java 9 issue https://github.com/spring-projects/spring-boot/wiki/Spring-Boot-with-Java-9  -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>--add-modules java.base</argLine>
+                </configuration>
+                <!-- TODO remove once a newer version of surefire (2.21.1+) is compatible with JUnit 5 and used by Spring Boot -->
+                <!-- Reference: https://github.com/junit-team/junit5/issues/809 -->
+                <dependencies>
+                    <dependency>
+                        <groupId>org.junit.platform</groupId>
+                        <artifactId>junit-platform-surefire-provider</artifactId>
+                        <version>${junit.platform.version}</version>
+                    </dependency>
+
+                    <!-- Only required to run tests in an IDE that bundles an older version and for junit-platform-surefire-provider bug -->
+                    <dependency>
+                        <groupId>org.junit.jupiter</groupId>
+                        <artifactId>junit-jupiter-engine</artifactId>
+                        <version>5.0.2</version>
+                    </dependency>
+
+                </dependencies>
+            </plugin>
         </plugins>
     </build>
 
 
     <!-- For not released spring boot versions -->
-    <!-- <repositories>
-         <repository>
-             <id>spring-snapshots</id>
-             <url>http://repo.spring.io/snapshot</url>
-             <snapshots>
-                 <enabled>true</enabled>
-             </snapshots>
-         </repository>
-         <repository>
-             <id>spring-milestones</id>
-             <url>http://repo.spring.io/milestone</url>
-         </repository>
-     </repositories>
-     <pluginRepositories>
-         <pluginRepository>
-             <id>spring-snapshots</id>
-             <name>Spring Snapshots</name>
-             <url>https://repo.spring.io/snapshot</url>
-             <snapshots>
-                 <enabled>true</enabled>
-             </snapshots>
-         </pluginRepository>
-         <pluginRepository>
-             <id>spring-milestones</id>
-             <name>Spring Milestones</name>
-             <url>https://repo.spring.io/milestone</url>
-             <snapshots>
-                 <enabled>false</enabled>
-             </snapshots>
-         </pluginRepository>
-     </pluginRepositories>-->
-    <!--   -->
-
+    <repositories>
+        <repository>
+            <id>spring-snapshots</id>
+            <url>http://repo.spring.io/snapshot</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>spring-milestones</id>
+            <url>http://repo.spring.io/milestone</url>
+        </repository>
+    </repositories>
+    <pluginRepositories>
+        <pluginRepository>
+            <id>spring-snapshots</id>
+            <name>Spring Snapshots</name>
+            <url>https://repo.spring.io/snapshot</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </pluginRepository>
+        <pluginRepository>
+            <id>spring-milestones</id>
+            <name>Spring Milestones</name>
+            <url>https://repo.spring.io/milestone</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </pluginRepository>
+    </pluginRepositories>
 </project>
